--- a/eShopSolution.AdminApp/Views/Login/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/Login/Index.cshtml
@@ -27,7 +27,7 @@
                             <div class="card shadow-lg border-0 rounded-lg mt-5">
                                 <div class="card-header"><h3 class="text-center font-weight-light my-4">Đăng nhập</h3></div>
                                 <div class="card-body">
-                                    <form asp-controller="User" asp-action="Login" method="post">
+                                    <form asp-controller="Login" asp-action="Index" method="post">
                                         <div class="form-floating mb-3">
                                             <input class="form-control" asp-for="UserName" type="text" placeholder="Nhập tài khoản" />
                                             <label>Tài khoản</label>
