--- a/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -15,7 +15,6 @@
         <div class="card-header">
             <a class="btn btn-success" asp-action="Create" asp-controller="User">Tạo mới</a>
         </div>
-
         <div class="card-body">
             <div class="table-responsive">
                 <table class="table table-bordered">
@@ -59,7 +58,7 @@
                                     @Html.DisplayFor(modelItem => item.Email)
                                 </td>
                                 <td>
-                                    @Html.ActionLink("Edit", "Edit", new {  id=item.Id  }) |
+                                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                                     @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                                     @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                                 </td>
@@ -68,6 +67,7 @@
                     </tbody>
                 </table>
             </div>
+            @await Component.InvokeAsync("Pager", Model)
         </div>
     </div>
 </div>
