--- a/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
+++ b/eShopSolution.AdminApp/Views/Shared/_Layout.cshtml
@@ -33,10 +33,10 @@
                     <li><a class="dropdown-item" href="/Profile/Index">@User.Identity.Name</a></li>
                     <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                     <li><hr class="dropdown-divider" /></li>
-                    <form method ="post" asp-action="Logout" asp-controller="User"> 
+                    <form method="post" asp-action="Logout" asp-controller="User">
                         <button class="dropdown-item" type="submit">Đăng xuất</button>
                     </form>
-                    
+
                 </ul>
             </li>
         </ul>
@@ -129,6 +129,7 @@
             </footer>
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="/js/scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
@@ -136,5 +137,6 @@
     <script src="/assets/demo/chart-bar-demo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" crossorigin="anonymous"></script>
     <script src="/js/datatables-simple-demo.js"></script>
+    @RenderSection("Scripts",required:false)
 </body>
 </html>
